--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "typechain",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,10 @@
   "homepage": "https://github.com/happyness980817/TypeScript-BlockChain-2025#readme",
   "description": "",
   "devDependencies": {
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.10"
   }
 }
