--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "outDir": "build",
     "target": "ES6",
-    "lib": ["ES6", "DOM"], // "lib" explains to typescript which APIs to use and where the code will be running.
+    "lib": ["ES6"], // "lib" explains to typescript which APIs to use and where the code will be running.
     "strict": true,
-    "allowJs": true
+    "esModuleInterop": true,
+    "module": "commonjs"
   }
 }
